...
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="Gxj-sM-ebt">
                                        <rect key="frame" x="10" y="8" width="334" height="41"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="3HD-d4-WTg"/>
                                        </constraints>
                                        <segments>
                                            <segment title="Sell"/>
                                            <segment title="Buy"/>
                                        </segments>
                                        <color key="selectedSegmentTintColor" systemColor="tintColor"/>
                                        <connections>
                                            <action selector="toggleSegmentControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="Rqa-eg-GZm"/>
                                        </connections>
                                    </segmentedControl>
...
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title=" Add Currency">
                                            <imageReference key="image" image="plus.circle.fill" catalog="system" symbolScale="medium"/>
                                        </buttonConfiguration>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Add Currency"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="addCurrency:" destination="BYZ-38-t0r" eventType="touchUpInside" id="swf-3R-5xz"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kq9-Mb-EOe">
...
                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title=" ">
                                            <imageReference key="image" image="square.and.arrow.up" catalog="system" variableValue="1"/>
                                        </buttonConfiguration>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Share Сurrency"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="shareExchangeRate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="geh-i5-w8R"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                                                </connections>
                                            </button>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" text="" placeholder="Search Currency" showsBookmarkButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Gj-Xu-3CG">
                                <rect key="frame" x="0.0" y="147" width="393" height="56"/>
                                <color key="backgroundColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <textInputTraits key="textInputTraits"/>
                                <scopeButtonTitles>
                                    <string>Title</string>
                                    <string>Title</string>
...
