...
                         CurrencyModel(title: "H", currency: ["HKD - Hong Kong Dollar",
                                                              "HNL - Honduran Lempira",
                                                              "HRK - Croatian Kuna",
                                                              "HTG - Haitian Gourde",
                                                              "HUF - Hungarian Forint"]),
                         CurrencyModel(title: "I", currency: ["IDR - Indonesian Rupiah",
                                                              "ILS - Israeli New Sheqel",
                                                              "IMP - Manx pound",
                                                              "INR - Indian Rupee",
                                                              "IQD - Iraqi Dinar",
                                                              "IRR - Iranian Rial",
                                                              "ISK - Icelandic Krona"]),
                         CurrencyModel(title: "J", currency: ["JEP - Jersey Pound",
...
